    through each color.

 ** `im2bw' now supports input images of the int16 class and deals better with
    RGB images since it uses `rgb2gray' internally (see changes to rgb2gray).
    Threshold is performed on all values greater than value instead of greater
    than or equal.

 ** `imhist' is much more compatible with matlab and among other changes,
    it now uses the whole range of the class for the histogram rather than
    the minimum and maximum of the input image and displays a colorbar under
    the histogram.

 ** `isbw' now defines a black-and-white image as a binary non-sparse
    matrix. This is compatible with matlab. To use the old behaviour,
    use the new option for the call "isbw (img, "non-logical").
    For backwards compatibility, if a non-logical matrix of 0 and 1 is
    used as input, `isbw' will still return true but a warning will be
    issued since this will deprecated later.

 ** `isgray' now also returns true for matrices of the int16 class.

 ** `isrgb' now returns false for logical matrix.

 ** `tiff_tag_read' had several bug fixes and can now check IFDs beyond
    the first. It can also accept mutiple tag values and IFDs simultaneously
    and return a matrix of the values found. Its documentation has been
    expanded (as well as an explanation of TIFF structure on the source)

 ** For sake of matlab compatibility, the behaviour of `mat2gray' has been
    greatly changed. Among the changes, it will no longer swap the minimum and
    maximum options if the first is larger than the later. Instead, will return
    the image complement after truncation. Also, when the maximum and minimum
    values are equal, `mat2gray' will truncate all values between 0 and 1. See
    the help text (or source) for a detailed description of cautions.

 ** Package is now dependent on GNU Octave version 3.6.0 or later.

 ** Package is now dependent on the signal package version 1.2.0 or later..

 ** Package is no longer automatically loaded.