@@ -1,6 +1,6 @@
 all: __spatial_filtering__.oct __bilateral__.oct __custom_gaussian_smoothing__.oct \
 	__boundary__.oct bwlabel.oct bwfill.oct rotate_scale.oct hough_line.oct \
-	graycomatrix.oct deriche.oct __bwdist.oct nonmax_supress.oct bwlabeln.oct
+	graycomatrix.oct deriche.oct __bwdist__.oct nonmax_supress.oct bwlabeln.oct
 
 %.oct: %.cc
 	mkoctfile -Wall $<
