@@ -13,7 +13,7 @@
 // You should have received a copy of the GNU General Public License along with
 // this program; if not, see <http://www.gnu.org/licenses/>.
 
-// __bwdist.cc - OCT file, implements the BWDIST function
+// __bwdist__.cc - OCT file, implements the BWDIST function
 // Depends on "edtfunc.c" for the actual computations
 
 #include <octave/oct.h>
@@ -59,9 +59,9 @@ extern "C"
 }  /* end extern "C" */
 #endif
 
-DEFUN_DLD ( __bwdist, args, nargout,
+DEFUN_DLD ( __bwdist__, args, nargout,
 "-*- texinfo -*-\n\
-@deftypefn {Loadable Function} {@var{D} =} __bwdist(@var{bw})\n\
+@deftypefn {Loadable Function} {@var{D} =} __bwdist__(@var{bw})\n\
 Computes the distance transform of the image @var{bw}.\n\
 @var{bw} should be a binary 2D array, either a Boolean array or a\n\
 numeric array containing only the values 0 and 1.\n\
@@ -72,7 +72,7 @@ for each background pixel is the distance (according to the chosen\n\
 metric) to the closest object pixel. For each object pixel the\n\
 return value is 0.\n\
 \n\
-@deftypefnx{Loadable Function} {@var{D} =} __bwdist(@var{bw}, @var{method})\n\
+@deftypefnx{Loadable Function} {@var{D} =} __bwdist__(@var{bw}, @var{method})\n\
 \n\
 @var{method} is a string to choose the distance metric. Currently\n\
 available metrics are 'euclidean', 'chessboard', 'cityblock' and\n\
@@ -80,7 +80,7 @@ available metrics are 'euclidean', 'chessboard', 'cityblock' and\n\
 to any string starting with 'e', 'ch', 'ci' and 'q', respectively.\n\
 If @var{method} is not specified, 'euclidean' is the default.\n\
 \n\
-@deftypefnx {Loadable Function} {[@var{D},@var{C}] =} __bwdist(@var{bw}, @var{method})\n\
+@deftypefnx {Loadable Function} {[@var{D},@var{C}] =} __bwdist__(@var{bw}, @var{method})\n\
 \n\
 If a second output argument is given, the linear index for the\n\
 closest object pixel is returned for each pixel. (For object\n\
