@@ -129,6 +129,8 @@ Summary of important user-visible changes for image 1.1.0:
     values are equal, `mat2gray' will truncate all values between 0 and 1. See
     the help text (or source) for a detailed description of cautions.
 
+ ** The private function `__bwdist` has been renamed `__bwdist__`
+
  ** Package is now dependent on GNU Octave version 3.6.0 or later.
 
  ** Package is now dependent on the signal package version 1.2.0 or later..
